# BaDzi_bot

./: .clinerules  .dockerignore  .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  LICENSE  MASTER.md  QWEN.md  README.md  alembic.ini  deploy.md  docker-compose.yml  product_idea.md  pyproject.toml  task.md  tasks.md
.claude/skills/brainstorming/: SKILL.md
.claude/skills/systematic-debugging/: SKILL.md
.claude/skills/verification-before-completion/: SKILL.md
.claude/skills/writing-plans/: SKILL.md
.cursor/rules/: conventions.mdc  vision.mdc  workflow.mdc
.github/workflows/: ci.yml
ai/: _render_pool.py  base_interpretation.py  budget.py  calendar_context.py  calendar_parse.py  card_renderer.py  context.py  day_image.py  fallback.py  forecast.py  orchestrator.py  router.py  skill_router.py  svg_renderer.py  temporal_context.py  text_extract.py
ai/prompts/: __init__.py  anastasia_system.md  base.md  base_classic.md  base_edoha.md  base_modern.md  birth_extract_system.md  skill_router_system.md
ai/prompts/algorithms/: career_alignment.md  decision_chain.md  health_diagnostics.md  opportunity_window.md  relationships_match.md  risk_assessment.md  term_unpack.md
ai/rag/: __init__.py  extract.py  format.py  llm_extract.py  models.py  public.py  retrieve.py  store.py
ai/skills/: __init__.py  decision.md  default.md  health.md  loader.py  models.py  relationships.md  risk.md  time.md  work.md
assets/hieroglyphs/: PROMPTS.md
assets/stickers/: ANIMATION_PROMPTS.md
bot/: config.py  logging.py  main.py  states.py
bot/keyboards/: __init__.py  reply.py
bot/middlewares/: __init__.py  db_session.py  history.py  tracing.py  user_middleware.py
bot/routers/: birth_data.py  consultation.py  forecast.py  journal.py  master_meeting.py  payments.py  start.py
bot/scheduler/: __init__.py  __main__.py  jobs.py  runner.py
bot/services/: birth_datetime.py  geocoding.py  menu.py  payments.py  telegram_split.py  teletranscribe.py  yookassa_api.py
calculator/: __init__.py  age_utils.py  auxiliary.py  calendar_select.py  day_master.py  hidden_stems.py  important_dates.py  interactions.py  luck_pillars.py  models.py  pillars.py  solar_terms.py  structures.py  structures_tables.py  swiss.py  symbolic_stars.py  symbolic_stars_tables.py  ten_gods.py  true_solar_time.py
db/: engine.py  models.py
db/repositories/: __init__.py  chart_repo.py  consultation_repo.py  forecast_repo.py  journal_repo.py  master_meeting_repo.py  subscription_repo.py  user_repo.py
doc/: algorithm_review_prompts.md  gemini_research.md  school_layered_flow.md  vision.md  Создание высокоточного калькулятора БаЦзы.md
doc/benchmarks/: render.md
doc/proposals/: admin_analytics_plan.md  bge_m3_embeddings.md  bge_m3_embeddings_plan.md  migration_timeweb_openrouter_plan.md
doc/research/: anastasia_prompt_optimization_2026-05-16.md  fractal_rag_2026-05-17.md  retrieval_stack_2026-05-19.md  structures_v1_perplexity.md  structures_v2_perplexity_deep.md  symbolic_stars_v1.json  symbolic_stars_v1.md  symbolic_stars_v2_gemini.md
docker/fontconfig/: 99-bazi-aliases.conf
graphify-out/: .graphify_analysis.json  .graphify_detect.json  .graphify_semantic.json  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
knowledge/: bootstrap.py  schema.py
knowledge/ingest/: README.md  __init__.py  __main__.py  cli.py  extract.py  from_pdf.py  models.py  parser.py  writer.py
migrations/: env.py
migrations/versions/: 20260504_151398db4f39_create_initial_tables.py  20260519_5c7804a9c2c3_add_partner_chart_id.py  20260519_776d382ae50d_add_forecast_subscriptions.py  20260520_236e0c24f6ad_add_journal_tables.py  20260520_c28ca4a32070_add_master_meetings.py  20260520_fd6512684d2f_add_important_dates_flags.py  20260524_4af483b51b7e_free_questions_used_as_counter_wave_7_ux.py  20260526_a1b2c3d4e5f6_add_chosen_school_to_forecast_sub.py  20260602_b2c3d4e5f6a7_add_default_school_to_charts.py  20260602_c3d4e5f6a7b8_add_payment_id.py  20260602_d4e5f6a7b8c9_important_date_dedup.py  20260610_e5f6a7b8c9d0_add_reflection_hour_utc.py
research/: gemini-code-1779693070880.md  gemini-modern-1779693734067.md  gemini-modern-1779693741331.md  gemini_prompt_classic_school.md  gemini_prompt_edoha_master_questions.md  gemini_prompt_modern_school.md  Ответы_Мастера_Эдохи_на_10_вопросов.md
scripts/: bench_render.py  edoha_export_json.py  export_edoha_to_md.py  graphify_update.py  import_edoha_kuzu.py  research_bazi_structures.py  tag_teacher_school.py
tasks/: __init__.py  broker.py  consultation.py  master_meeting.py
tests/unit/test_ai/: test_base_interpretation.py  test_budget.py  test_calendar_parse.py  test_context.py  test_day_image.py  test_fallback.py  test_forecast.py  test_orchestrator.py  test_prompts.py  test_router.py  test_skill_router.py  test_svg_renderer.py  test_temporal_context.py  test_temporal_context_skill_sections.py  test_text_extract.py
tests/unit/test_bot/: test_birth_data_parsing.py  test_birth_datetime.py  test_chart_delete.py  test_clarifications.py  test_consultation.py  test_consultation_school_selector.py  test_consultation_skill_router.py  test_forecast_handlers.py  test_journal_handlers.py  test_master_meeting.py  test_partner_flow.py  test_payments.py  test_scan_important_dates.py  test_scheduler.py  test_smart_calc.py  test_start.py  test_yookassa_api.py  test_yookassa_flow.py
tests/unit/test_calculator/: test_age_utils.py  test_auxiliary.py  test_calendar_select.py  test_day_master.py  test_determinism.py  test_hidden_stems.py  test_important_dates.py  test_interactions.py  test_luck_pillars.py  test_models.py  test_pillars.py  test_solar_terms.py  test_structures.py  test_swiss.py  test_symbolic_stars.py  test_ten_gods.py  test_true_solar_time.py
tests/unit/test_db/: test_chart_repo_default_school.py  test_chart_repo_delete.py  (+2 more)
web/templates/: chart.html  chart.svg.j2
База/: ba_zi_prompt_anastasia_v2.md
База/edoha/: README.md
База/teacher/: README.md  _template.md
(+631 files in other folders)
